# service-template

./: README.md  cookiecutter.json
{{cookiecutter.service_slug}}/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
{{cookiecutter.service_slug}}/.github/workflows/: ci.yml
{{cookiecutter.service_slug}}/chart/: .helmignore  Chart.yaml  values.yaml
{{cookiecutter.service_slug}}/chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  consumer-deployment.yaml  deployment.yaml  hpa.yaml  migrate-job.yaml  postgres-cluster.yaml  relay-deployment.yaml  service.yaml  servicemonitor.yaml
{{cookiecutter.service_slug}}/config/: middleware.py  settings.py  urls.py
{{cookiecutter.service_slug}}/health/: urls.py  views.py
{{cookiecutter.service_slug}}/tests/: conftest.py  test_health.py
{{cookiecutter.service_slug}}/{{cookiecutter.app_name}}/: admin.py  apps.py  auth.py  events.py  models.py  serializers.py  urls.py  views.py
{{cookiecutter.service_slug}}/{{cookiecutter.app_name}}/management/commands/: relay_outbox.py
{{cookiecutter.service_slug}}/{{cookiecutter.app_name}}/migrations/: 0001_initial.py
