[project]
name = "{{ cookiecutter.service_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.service_description }}"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "django=={{ cookiecutter.django_version }}",
    "djangorestframework>=3.15,<3.16",
    "djangorestframework-simplejwt>=5.3,<5.4",
    "drf-spectacular>=0.27,<0.28",
    "psycopg[binary]>=3.2,<3.3",
    "gunicorn>=23.0,<24.0",
    "confluent-kafka>=2.6,<2.7",
    "python-json-logger>=2.0,<3.0",
    "django-prometheus>=2.3,<2.4",
    "environs>=11.0,<12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2.0",
    "django-stubs[compatible-mypy]>=5.1,<6.0",
    "djangorestframework-stubs>=3.15,<3.16",
]

[tool.ruff]
line-length = 100
target-version = "py{{ cookiecutter.python_version|replace('.', '') }}"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["migrations", "tests"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --cov={{ cookiecutter.app_name }} --cov=health --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "health", "{{ cookiecutter.app_name }}"]
